# OpenSoup

./: .gitignore  CMakeLists.txt
cmake/: Ruby186.cmake
cmake/toolchains/: macos-x86_64.cmake
spike/ruby-embed/: main.c
src/: app_assets.c  app_assets.h  assets.c  assets.h  assets_layout.h  audio.c  audio.h  demo.c  demo.h  nsis.c  nsis.h  opensoup.c  opensoup.h  physics.c  physics.h  ruby_api.inc  rubyboot_main.c  rubyhost.c  rubyhost.h  rubyhost_engine.c  rubyhost_internal.h  rubyhost_limb.c  rubyhost_node.c  rubyhost_realize.c  rubyhost_sound.c  scene.c  scene.h  sprite_hook.c  sprite_hook.h  toybox.c  toybox.h  toybox_button.c  toybox_button.h  toybox_scroll.c  toybox_scroll.h  toydefs.c  toydefs.h  toyfile.c  toyfile.h  toyfile_fs.c  (+5 more)
src/macos/: app_paths.h  app_paths.m  main_macos.m  sokol_impl.m
tools/: build-ruby186.sh  gen-ruby-api.py  patch-toybox-harness.py
